[package]
name = "bench-old"
version = "0.1.0"
edition = "2024"

[dependencies]
bench-common = { path = "../bench-common" }

deltalake = { git = "https://github.com/natinimni/delta-rs", tag = "kusto-rust-v0.16.5.3", version = "0.16.5" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "=0.4.39"
async-trait = "0.1"
url = "2"